[package]
name = "servidor-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = { version = "0.24", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
